--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -31,6 +31,9 @@ quarkus.mongodb.connection-string = ${MONGO_CONN_STR}
 quarkus.mongodb.database = ${AUTH_DB_NAME}
 
 
+recon.api.host=${RECON_SVC_HOST}
+
+
 
 # Configuring Test event channel
 
