added github achanges

--- a/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
@@ -42,6 +42,7 @@ objects:
       MONGO_CONN_STR: ${MONGO_CONN_STR}
       AUTH_DB_NAME: ${AUTH_DB_NAME}
       KAFKA_CONFLUENT_COMPAT_REGISTRY: ${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+      RECON_SVC_HOST: ${RECON_SVC_HOST}
     type: Opaque
 parameters:
   - description: The name of the application for labelling all artifacts.
@@ -73,3 +74,4 @@ parameters:
   - name: AUTH_DB_NAME
   - name: MONGO_CONN_STR
   - name: KAFKA_CONFLUENT_COMPAT_REGISTRY
+  - name: RECON_SVC_HOST
