--- a/rsbc-ride-producer-api/openshift/producer-api-build.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build.yml
@@ -145,6 +145,12 @@ objects:
                 key: KAFKA_CONFLUENT_COMPAT_REGISTRY
                 name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
           dockerfilePath: Dockerfile.multistage
+          - name: RECON_SVC_HOST
+            valueFrom:
+              secretKeyRef:
+                key: RECON_SVC_HOST
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          dockerfilePath: Dockerfile.multistage
       output:
         to:
           kind: ImageStreamTag
