--- a/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
@@ -42,6 +42,7 @@ objects:
       MONGO_CONN_STR: ${MONGO_CONN_STR}
       AUTH_DB_NAME: ${AUTH_DB_NAME}
       KAFKA_CONFLUENT_COMPAT_REGISTRY: ${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+      RECON_SVC_HOST: ${RECON_SVC_HOST}
       ISSUANCE_EVENT_TOPIC: ${ISSUANCE_EVENT_TOPIC}
       PAYMENT_EVENT_TOPIC: ${PAYMENT_EVENT_TOPIC}
       DISPUTE_EVENT_TOPIC: ${DISPUTE_EVENT_TOPIC}
@@ -78,6 +79,7 @@ parameters:
   - name: AUTH_DB_NAME
   - name: MONGO_CONN_STR
   - name: KAFKA_CONFLUENT_COMPAT_REGISTRY
+  - name: RECON_SVC_HOST
   - name: ISSUANCE_EVENT_TOPIC
   - name: PAYMENT_EVENT_TOPIC
   - name: DISPUTE_EVENT_TOPIC
