--- a/rsbc-ride-producer-api/workflows_backups/v2/build_push_pr_onopen_prdeploy.yml
+++ b/rsbc-ride-producer-api/workflows_backups/v2/build_push_pr_onopen_prdeploy.yml
@@ -1,10 +1,12 @@
-name: Build, Push and deploy for PR-On Open new PR from release branch to devbranch(Deploy to Dev)
+name: Build, Push and deploy for PR-On Open new PR from feature to release branch(Deploy to PR)
 on:
   pull_request:
     types: [opened, reopened,edited,synchronize]
-    branches:   
-      - 'maincomponent/producerapi_devbranch'
-      # - 'master'
+    branches:
+      - 'maincomponent/producerapi-release**'
+    # branches-ignore:   
+    #   - 'main'
+    #   - 'master'
       # - 'release**'
 
 
@@ -13,8 +15,8 @@ jobs:
     name: Merge PR locally and create temp branch
     runs-on: ubuntu-latest
     env:
-      # build_config_name: "ride-vips-adapter-nginx-proxy-build-v2"
-      # base_image_tag: "1"
+      build_config_name: "ride-vips-adapter-nginx-proxy-build-v2"
+      base_image_tag: "1"
       PR_NUMBER: ${{ github.event.number }}
       PR_IMAGE_STREAM_TAG: pr-build-${{ github.sha}}
 
@@ -33,17 +35,17 @@ jobs:
           git checkout $GITHUB_HEAD_REF      
           git checkout $GITHUB_BASE_REF  
           git merge $GITHUB_HEAD_REF 
-          git checkout -b tempbranch_devdeploy/pr-${{ env.PR_NUMBER }}
+          git checkout -b tempbranch/pr-${{ env.PR_NUMBER }}
           git remote add testbranch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git push -u testbranch tempbranch_devdeploy/pr-${{ env.PR_NUMBER }}
+          git push -u testbranch tempbranch/pr-${{ env.PR_NUMBER }}
 
   create_env_secrets:
     name: Create Env secret
     runs-on: ubuntu-latest
     needs: merge_pr_local
-    environment: dev
+    environment: pr
     env:
-      APP_VERSION: "dev"
+      APP_VERSION: "pr"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3      
@@ -56,7 +58,7 @@ jobs:
       - name: Create Secrets
         run: |
           cd rsbc-ride-producer-api/openshift
-          oc process -f producer-api-build-secret.yml --param VERSION=${{ env.APP_VERSION }} --param NAMESPACE=${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools --param APP_ACCEPTED_EVENT_TOPIC=${{ secrets.APP_ACCEPTED_EVENT_TOPIC }} --param TEST_EVENT_TOPIC=${{ secrets.TEST_EVENT_TOPIC }} --param DISCLOSURE_EVENT_TOPIC=${{ secrets.DISCLOSURE_EVENT_TOPIC }} --param EVSUBMITTED_EVENT_TOPIC=${{ secrets.EVSUBMITTED_EVENT_TOPIC }} --param IMAGE_NAMESPACE=${{ secrets.IMAGE_NAMESPACE }} --param IMAGE_REGISTRY=${{ secrets.IMAGE_REGISTRY }} --param KAFKA_SASL_CONFIG="${{ secrets.KAFKA_SASL_CONFIG }}" --param KAFKA_SASL_MECH=${{ secrets.KAFKA_SASL_MECH }} --param KAFKA_SCHEMA_REGISTRY=${{ secrets.KAFKA_SCHEMA_REGISTRY }} --param KAFKA_SEC_PROTOCOL=${{ secrets.KAFKA_SEC_PROTOCOL }} --param KAFKA_SERVER=${{ secrets.KAFKA_SERVER }} --param PAYRECVD_EVENT_TOPIC=${{ secrets.PAYRECVD_EVENT_TOPIC }} --param REVSCHED_EVENT_TOPIC=${{ secrets.REVSCHED_EVENT_TOPIC }} --param SSL_PROTOCOL=${{ secrets.SSL_PROTOCOL }} --param SSL_TRUSTSTORE=${{ secrets.SSL_TRUSTSTORE }} --param SSL_TRUSTTORE_PASS=${{ secrets.SSL_TRUSTTORE_PASS }} --param SSL_TRUSTTORE_TYPE=${{ secrets.SSL_TRUSTTORE_TYPE }} --param MONGO_CONN_STR="${{ secrets.MONGO_CONN_STR }}" --param AUTH_DB_NAME="${{ secrets.AUTH_DB_NAME }}" --param KAFKA_CONFLUENT_COMPAT_REGISTRY="${{ secrets.KAFKA_CONFLUENT_COMPAT_REGISTRY }}" --param RECON_SVC_HOST="${{ secrets.RECON_SVC_HOST }}" | oc apply -f -
+          oc process -f producer-api-build-secret.yml --param VERSION=${{ env.APP_VERSION }} --param NAMESPACE=${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools --param APP_ACCEPTED_EVENT_TOPIC=${{ secrets.APP_ACCEPTED_EVENT_TOPIC }} --param TEST_EVENT_TOPIC=${{ secrets.TEST_EVENT_TOPIC }} --param DISCLOSURE_EVENT_TOPIC=${{ secrets.DISCLOSURE_EVENT_TOPIC }} --param EVSUBMITTED_EVENT_TOPIC=${{ secrets.EVSUBMITTED_EVENT_TOPIC }} --param IMAGE_NAMESPACE=${{ secrets.IMAGE_NAMESPACE }} --param IMAGE_REGISTRY=${{ secrets.IMAGE_REGISTRY }} --param KAFKA_SASL_CONFIG="${{ secrets.KAFKA_SASL_CONFIG }}" --param KAFKA_SASL_MECH=${{ secrets.KAFKA_SASL_MECH }} --param KAFKA_SCHEMA_REGISTRY=${{ secrets.KAFKA_SCHEMA_REGISTRY }} --param KAFKA_SEC_PROTOCOL=${{ secrets.KAFKA_SEC_PROTOCOL }} --param KAFKA_SERVER=${{ secrets.KAFKA_SERVER }} --param PAYRECVD_EVENT_TOPIC=${{ secrets.PAYRECVD_EVENT_TOPIC }} --param REVSCHED_EVENT_TOPIC=${{ secrets.REVSCHED_EVENT_TOPIC }} --param SSL_PROTOCOL=${{ secrets.SSL_PROTOCOL }} --param SSL_TRUSTSTORE=${{ secrets.SSL_TRUSTSTORE }} --param SSL_TRUSTTORE_PASS=${{ secrets.SSL_TRUSTTORE_PASS }} --param SSL_TRUSTTORE_TYPE=${{ secrets.SSL_TRUSTTORE_TYPE }} --param MONGO_CONN_STR="${{ secrets.MONGO_CONN_STR }}" --param AUTH_DB_NAME="${{ secrets.AUTH_DB_NAME }}" --param KAFKA_CONFLUENT_COMPAT_REGISTRY="${{ secrets.KAFKA_CONFLUENT_COMPAT_REGISTRY }}" | oc apply -f -
       - name: Authenticate and set context for dev get cluster ca
         uses: redhat-actions/oc-login@v1.1.2
         with:
@@ -80,10 +82,10 @@ jobs:
   build_push:
     name: Build and Push the image
     runs-on: ubuntu-latest
-    environment: dev
+    environment: pr
     needs: [merge_pr_local,create_env_secrets]
     env:
-      build_config_name: "ride-producer-api-build-dev"
+      build_config_name: "ride-producer-api-build-pr"
       PR_NUMBER: ${{ github.event.number }}
       # base_image_tag: "1"
       # PR_NUMBER: ${{ github.event.number }}
@@ -102,7 +104,7 @@ jobs:
       - name: Apply Build Yaml
         run: |
           cd rsbc-ride-producer-api/openshift
-          oc process -f producer-api-build.yml --param SOURCE_REPOSITORY_REF=tempbranch_devdeploy/pr-${{ env.PR_NUMBER }} --param-file producer-api-build-dev-params.yml --param VERSION=$GITHUB_SHA | oc apply -f -
+          oc process -f producer-api-build.yml --param SOURCE_REPOSITORY_REF=tempbranch/pr-${{ env.PR_NUMBER }} --param-file producer-api-build-pr-params.yml --param VERSION=$GITHUB_SHA | oc apply -f -
           
       - name: Start the build and push
         run: |
@@ -116,12 +118,12 @@ jobs:
           cd jag-rsbc-ride
           git fetch
           git remote add testbranch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git push -d testbranch tempbranch_devdeploy/pr-${{ env.PR_NUMBER }}
+          git push -d testbranch tempbranch/pr-${{ env.PR_NUMBER }}
 
 
 
-  deploy_dev_argocd:
-    name: Push to Gitops repo for Dev deployment via Argocd
+  deploy_pr_argocd:
+    name: Push to Gitops repo for PR deployment via Argocd
     runs-on: ubuntu-latest
     needs: [merge_pr_local,create_env_secrets,build_push]
     env:
@@ -142,42 +144,42 @@ jobs:
       #     git pull
       #     git checkout -b pr-branch-${{env.PR_NUMBER}}  
       #     git push -u origin pr-branch-${{env.PR_NUMBER}} 
-      - name: Update Image tag for Dev deploy
+      - name: Update Image tag for PR deploy
         uses: mikefarah/yq@v4.28.1
         with:
-          cmd: yq eval -i '.images[0].newTag = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/dev/kustomization.yaml'
-      # - name: Update name suffix for Dev deploy
-      #   uses: mikefarah/yq@v4.28.1
-      #   with:
-      #     cmd: yq eval -i '.nameSuffix = "-dev"' 'overlays/dev/kustomization.yaml'
-      # - name: Update app name label for Dev deploy
-      #   uses: mikefarah/yq@v4.28.1
-      #   with:
-      #     cmd: yq eval -i '.commonLabels["app.kubernetes.io/name"] = "ride-producer-api-dev"' 'overlays/pr/kustomization.yaml'
-      # - name: Update app label for PR deploy
-      #   uses: mikefarah/yq@v4.28.1
-      #   with:
-      #     cmd: yq eval -i '.commonLabels.app = "ride-producer-api-pr-${{env.PR_NUMBER}}"' 'overlays/pr/kustomization.yaml'
-      - name: Update release name for Dev deploy
+          cmd: yq eval -i '.images[0].newTag = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/pr/kustomization.yaml'
+      - name: Update name suffix for PR deploy
         uses: mikefarah/yq@v4.28.1
         with:
-          cmd: yq eval -i '.commonAnnotations.release_name = "${{env.RELEASE_NAME}}"' 'overlays/dev/kustomization.yaml'
-      # - name: Update hpa Dev name
-      #   uses: mikefarah/yq@v4.28.1
-      #   with:
-      #     cmd: yq eval -i '.spec.scaleTargetRef.name = "ride-producer-api-pr-${{env.PR_NUMBER}}"' 'overlays/pr/custom-hpa-ride-producer-api.yml'
+          cmd: yq eval -i '.nameSuffix = "-pr-${{env.PR_NUMBER}}"' 'overlays/pr/kustomization.yaml'
+      - name: Update app name label for PR deploy
+        uses: mikefarah/yq@v4.28.1
+        with:
+          cmd: yq eval -i '.commonLabels["app.kubernetes.io/name"] = "ride-producer-api-pr-${{env.PR_NUMBER}}"' 'overlays/pr/kustomization.yaml'
+      - name: Update app label for PR deploy
+        uses: mikefarah/yq@v4.28.1
+        with:
+          cmd: yq eval -i '.commonLabels.app = "ride-producer-api-pr-${{env.PR_NUMBER}}"' 'overlays/pr/kustomization.yaml'
+      - name: Update release name for PR deploy
+        uses: mikefarah/yq@v4.28.1
+        with:
+          cmd: yq eval -i '.commonAnnotations.release_name = "${{env.RELEASE_NAME}}"' 'overlays/pr/kustomization.yaml'
+      - name: Update hpa pr name
+        uses: mikefarah/yq@v4.28.1
+        with:
+          cmd: yq eval -i '.spec.scaleTargetRef.name = "ride-producer-api-pr-${{env.PR_NUMBER}}"' 'overlays/pr/custom-hpa-ride-producer-api.yml'
       - name: Update sha annotation
         uses: mikefarah/yq@v4.28.1
         with:
-          cmd: yq eval -i '.commonAnnotations.commit_sha = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/dev/kustomization.yaml'
+          cmd: yq eval -i '.commonAnnotations.commit_sha = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/pr/kustomization.yaml'
       - name: Check Changed value
         run: |
-          cat overlays/dev/kustomization.yaml
+          cat overlays/pr/kustomization.yaml
       - name: Push Changes
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "updated dev deploy details to dev overlay yaml"
+          git commit -m "updated pr details to yaml"
           git push -u origin deployment/rsbc-ride-producer-api
         
