--- a/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
@@ -43,6 +43,11 @@ objects:
       AUTH_DB_NAME: ${AUTH_DB_NAME}
       KAFKA_CONFLUENT_COMPAT_REGISTRY: ${KAFKA_CONFLUENT_COMPAT_REGISTRY}
       RECON_SVC_HOST: ${RECON_SVC_HOST}
+      ISSUANCE_EVENT_TOPIC: ${ISSUANCE_EVENT_TOPIC}
+      PAYMENT_EVENT_TOPIC: ${PAYMENT_EVENT_TOPIC}
+      DISPUTE_EVENT_TOPIC: ${DISPUTE_EVENT_TOPIC}
+      DISPUTE_UPDATE_EVENT_TOPIC: ${DISPUTE_UPDATE_EVENT_TOPIC}
+      VIOLATIONS_EVENT_TOPIC: ${VIOLATIONS_EVENT_TOPIC}
     type: Opaque
 parameters:
   - description: The name of the application for labelling all artifacts.
@@ -75,3 +80,8 @@ parameters:
   - name: MONGO_CONN_STR
   - name: KAFKA_CONFLUENT_COMPAT_REGISTRY
   - name: RECON_SVC_HOST
+  - name: ISSUANCE_EVENT_TOPIC
+  - name: PAYMENT_EVENT_TOPIC
+  - name: DISPUTE_EVENT_TOPIC
+  - name: DISPUTE_UPDATE_EVENT_TOPIC
+  - name: VIOLATIONS_EVENT_TOPIC
