--- a/rsbc-ride-producer-api/openshift/producer-api-build.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build.yml
@@ -149,6 +149,31 @@ objects:
               secretKeyRef:
                 key: RECON_SVC_HOST
                 name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: ISSUANCE_EVENT_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: ISSUANCE_EVENT_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: PAYMENT_EVENT_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: PAYMENT_EVENT_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: DISPUTE_EVENT_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: DISPUTE_EVENT_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: DISPUTE_UPDATE_EVENT_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: DISPUTE_UPDATE_EVENT_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: VIOLATIONS_EVENT_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: VIOLATIONS_EVENT_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
           dockerfilePath: Dockerfile.multistage
       output:
         to:
