--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -199,6 +199,20 @@ mp.messaging.outgoing.outgoing-violations.specific.avro.reader=true
 mp.messaging.outgoing.outgoing-violations.value.registry.json.encode.empty=true
 
 
+# Configuring payment query event channel
+mp.messaging.outgoing.outgoing-payquery.connector=smallrye-kafka
+mp.messaging.outgoing.outgoing-payquery.topic=${PAYQUERY_EVENT_TOPIC}
+mp.messaging.outgoing.outgoing-payquery.value.serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+mp.messaging.connector.smallrye-payquery.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+#mp.messaging.connector.smallrye-disputeupdate.apicurio.registry.url=${KAFKA_CONFLUENT_COMPAT_REGISTRY}
+mp.messaging.outgoing.outgoing-payquery.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.outgoing.outgoing-payquery.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.outgoing.outgoing-payquery.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.outgoing.outgoing-payquery.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+mp.messaging.outgoing.outgoing-payquery.specific.avro.reader=true
+mp.messaging.outgoing.outgoing-payquery.value.registry.json.encode.empty=true
+
+
 ## Configuring disputeupdate event channel
 #mp.messaging.outgoing.outgoing-disputeupdate.connector=smallrye-kafka
 #mp.messaging.outgoing.outgoing-disputeupdate.topic=${DISPUTE_UPDATE_EVENT_TOPIC}
