--- a/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
@@ -48,6 +48,7 @@ objects:
       DISPUTE_EVENT_TOPIC: ${DISPUTE_EVENT_TOPIC}
       DISPUTE_UPDATE_EVENT_TOPIC: ${DISPUTE_UPDATE_EVENT_TOPIC}
       VIOLATIONS_EVENT_TOPIC: ${VIOLATIONS_EVENT_TOPIC}
+      PAYQUERY_EVENT_TOPIC: ${PAYQUERY_EVENT_TOPIC}
     type: Opaque
 parameters:
   - description: The name of the application for labelling all artifacts.
@@ -85,3 +86,4 @@ parameters:
   - name: DISPUTE_EVENT_TOPIC
   - name: DISPUTE_UPDATE_EVENT_TOPIC
   - name: VIOLATIONS_EVENT_TOPIC
+  - name: PAYQUERY_EVENT_TOPIC
