--- a/rsbc-ride-producer-api/openshift/producer-api-build.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build.yml
@@ -174,6 +174,11 @@ objects:
               secretKeyRef:
                 key: VIOLATIONS_EVENT_TOPIC
                 name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
+          - name: PAYQUERY_EVENT_TOPIC
+            valueFrom:
+              secretKeyRef:
+                key: PAYQUERY_EVENT_TOPIC
+                name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
           dockerfilePath: Dockerfile.multistage
       output:
         to:
