--- a/recon-service/src/requirements.txt
+++ b/recon-service/src/requirements.txt
@@ -4,3 +4,6 @@ uvicorn==0.21.0
 gunicorn==20.1.0
 pymssql==2.2.7
 requests==2.28.2
+prometheus_client==0.16.0
+aioprometheus==23.3.0
+aioprometheus[starlette]
