--- a/ride-monitoring-svc/docker-compose.yml
+++ b/ride-monitoring-svc/docker-compose.yml
@@ -43,3 +43,24 @@ services:
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=testpassword
       - GF_USERS_ALLOW_SIGN_UP=false
+
+  mongo:
+    image: mongo
+    restart: always
+    container_mame: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME: root-user
+      - MONGO_INITDB_ROOT_PASSWORD: root-password
+      - MONGO_INITDB_DATABASE: testdb
+    ports:
+      - 27017:27017
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME: root-user
+      - ME_CONFIG_MONGODB_ADMINPASSWORD: root-password
+      - ME_CONFIG_MONGODB_URL: mongodb://root-user:root-password@mongo:27017/
