--- a/ride-monitoring-svc/docker-compose.yml
+++ b/ride-monitoring-svc/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "80:5000"  
     environment:
-      - MONGO_URL: mongodb://root-user:root-password@mongo:27017/
+      - MONGO_URL=mongodb://root-user:root-password@mongo:27017/
     # environment:  
     #   - ERR_STG_COLLECTION=errorstaging
   # stastd:
@@ -49,11 +49,11 @@ services:
   mongo:
     image: mongo
     restart: always
-    container_mame: mongo
+    container_name: mongo
     environment:
-      - MONGO_INITDB_ROOT_USERNAME: root-user
-      - MONGO_INITDB_ROOT_PASSWORD: root-password
-      - MONGO_INITDB_DATABASE: testdb
+      - MONGO_INITDB_ROOT_USERNAME=root-user
+      - MONGO_INITDB_ROOT_PASSWORD=root-password
+      - MONGO_INITDB_DATABASE=testdb
     ports:
       - 27017:27017
 
@@ -63,6 +63,6 @@ services:
     ports:
       - 8081:8081
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME: root-user
-      - ME_CONFIG_MONGODB_ADMINPASSWORD: root-password
-      - ME_CONFIG_MONGODB_URL: mongodb://root-user:root-password@mongo:27017/
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root-user
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=root-password
+      - ME_CONFIG_MONGODB_URL=mongodb://root-user:root-password@mongo:27017/
