--- a/ride-monitoring-svc/docker-compose.yml
+++ b/ride-monitoring-svc/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - 5000
     ports:
       - "80:5000"  
+    env_file:
+      - ./.env
     # environment:
     #   - MONGO_URL=mongodb://root-user:root-password@mongo:27017/
     # environment:  
