--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -14,15 +14,24 @@ jobs:
   test_build:
     name: Test the Build
     runs-on: ubuntu-latest
-    environment: pr
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3      
-      - name: Perform a test build
-        run: |
-          cd ride-monitoring-svc
-          docker build -f Dockerfile-build -t testimage .
-
-
+        uses: actions/checkout@v3    
+      - name: Setup
+        uses: docker/setup-buildx-action@v2
+        with:
+          install: true  
+      - name: Login
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ secrets.DOCKER_REGISTRY }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build
+        uses: docker/build-push-action@v3
+        with:
+          context: ride-monitoring-svc
+          file: Dockerfile-build
+          push: false
 
 
