--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -31,7 +31,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ride-monitoring-svc
-          file: Dockerfile-build
+          file: ride-monitoring-svc/Dockerfile-build
           push: false
 
 
