--- a/ride-monitoring-svc/Dockerfile
+++ b/ride-monitoring-svc/Dockerfile
@@ -1,7 +1,6 @@
 # FROM registry.access.redhat.com/ubi8/python-39
 # FROM image-registry.openshift-image-registry.svc:5000/be5301-tools/python-3.9-ubi-base-image:1.0
-# FROM artifacts.developer.gov.bc.ca/rbe5-images/python:3.9-slim-buster
-FROM python:3.9-slim-buster
+FROM artifacts.developer.gov.bc.ca/rbe5-images/python:3.9-slim-buster
 
 # RUN addgroup --system app && adduser --system --group app
 
